--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container">
       <div class="wrapper">
         <div class="text-input">
-          <textarea spellcheck="false" class="from-text" placeholder="Enter text"></textarea>
-          <textarea spellcheck="false" readonly disabled class="to-text" placeholder="Translation"></textarea>
+          <textarea spellcheck="false" class="from-text" placeholder="Enter text..."></textarea>
+          <textarea spellcheck="false" readonly disabled class="to-text" placeholder="Translation.."></textarea>
         </div>
         <ul class="controls">
           <li class="row from">
